fixed the A_adj part of code

--- a/Distance_Benchmark.ipynb
+++ b/Distance_Benchmark.ipynb
@@ -25,7 +25,7 @@
     "        A_adj[:,0] = A_adj[:,0] - u[0]\n",
     "        A_adj[:,1] = A_adj[:,1] - u[1]\n",
     "        A_adj[:,2] = A_adj[:,2] - u[2]\n",
-    "        dists[i,:] = slb.dgemv(1.0, a=A, x=u)\n",
+    "        dists[i,:] = slb.dgemv(1.0, a=A_adj, x=u)\n",
     "    return dists"
    ]
   },
@@ -55,8 +55,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.17 s, sys: 3.85 ms, total: 1.17 s\n",
-      "Wall time: 1.19 s\n"
+      "CPU times: user 1.19 s, sys: 11.7 ms, total: 1.2 s\n",
+      "Wall time: 1.22 s\n"
      ]
     }
    ],
@@ -75,8 +75,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 156 ms, sys: 0 ns, total: 156 ms\n",
-      "Wall time: 155 ms\n"
+      "CPU times: user 155 ms, sys: 63 µs, total: 155 ms\n",
+      "Wall time: 154 ms\n"
      ]
     }
    ],
@@ -95,8 +95,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 92 ms, sys: 0 ns, total: 92 ms\n",
-      "Wall time: 90.7 ms\n"
+      "CPU times: user 81.2 ms, sys: 3.94 ms, total: 85.2 ms\n",
+      "Wall time: 83.9 ms\n"
      ]
     }
    ],
@@ -132,8 +132,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 650 ms, sys: 3.97 ms, total: 654 ms\n",
-      "Wall time: 655 ms\n"
+      "CPU times: user 619 ms, sys: 3.99 ms, total: 623 ms\n",
+      "Wall time: 621 ms\n"
      ]
     }
    ],
@@ -152,8 +152,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 123 ms, sys: 4.07 ms, total: 127 ms\n",
-      "Wall time: 128 ms\n"
+      "CPU times: user 123 ms, sys: 37 µs, total: 123 ms\n",
+      "Wall time: 122 ms\n"
      ]
     }
    ],
@@ -172,8 +172,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 64.4 ms, sys: 7.87 ms, total: 72.3 ms\n",
-      "Wall time: 71 ms\n"
+      "CPU times: user 69 ms, sys: 10 µs, total: 69 ms\n",
+      "Wall time: 67.8 ms\n"
      ]
     }
    ],
@@ -209,8 +209,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 871 ms, sys: 31.9 ms, total: 903 ms\n",
-      "Wall time: 902 ms\n"
+      "CPU times: user 896 ms, sys: 16 ms, total: 912 ms\n",
+      "Wall time: 911 ms\n"
      ]
     }
    ],
@@ -229,8 +229,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 248 ms, sys: 4 ms, total: 252 ms\n",
-      "Wall time: 251 ms\n"
+      "CPU times: user 240 ms, sys: 34 µs, total: 240 ms\n",
+      "Wall time: 238 ms\n"
      ]
     }
    ],
@@ -249,8 +249,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 136 ms, sys: 16.1 ms, total: 153 ms\n",
-      "Wall time: 151 ms\n"
+      "CPU times: user 130 ms, sys: 18 µs, total: 130 ms\n",
+      "Wall time: 129 ms\n"
      ]
     }
    ],
@@ -286,8 +286,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.68 s, sys: 185 ms, total: 1.87 s\n",
-      "Wall time: 1.87 s\n"
+      "CPU times: user 1.64 s, sys: 165 ms, total: 1.8 s\n",
+      "Wall time: 1.8 s\n"
      ]
     }
    ],
@@ -306,8 +306,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 574 ms, sys: 165 ms, total: 739 ms\n",
-      "Wall time: 738 ms\n"
+      "CPU times: user 589 ms, sys: 144 ms, total: 734 ms\n",
+      "Wall time: 733 ms\n"
      ]
     }
    ],
@@ -326,8 +326,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 289 ms, sys: 197 ms, total: 485 ms\n",
-      "Wall time: 483 ms\n"
+      "CPU times: user 285 ms, sys: 205 ms, total: 490 ms\n",
+      "Wall time: 489 ms\n"
      ]
     }
    ],
