--- a/Distance_Benchmark.ipynb
+++ b/Distance_Benchmark.ipynb
@@ -25,7 +25,8 @@
     "        A_adj[:,0] = A_adj[:,0] - u[0]\n",
     "        A_adj[:,1] = A_adj[:,1] - u[1]\n",
     "        A_adj[:,2] = A_adj[:,2] - u[2]\n",
-    "        dists[i,:] = slb.dgemv(1.0, a=A_adj, x=u)\n",
+    "        A_adj = A_adj*A_adj\n",
+    "        dists[i,:] = A_adj[:,0] + A_adj[:,1] + A_adj[:,2]\n",
     "    return dists"
    ]
   },
@@ -55,8 +56,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.19 s, sys: 11.7 ms, total: 1.2 s\n",
-      "Wall time: 1.22 s\n"
+      "CPU times: user 1.31 s, sys: 0 ns, total: 1.31 s\n",
+      "Wall time: 1.31 s\n"
      ]
     }
    ],
@@ -75,8 +76,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 155 ms, sys: 63 µs, total: 155 ms\n",
-      "Wall time: 154 ms\n"
+      "CPU times: user 155 ms, sys: 3.37 ms, total: 159 ms\n",
+      "Wall time: 158 ms\n"
      ]
     }
    ],
@@ -95,8 +96,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 81.2 ms, sys: 3.94 ms, total: 85.2 ms\n",
-      "Wall time: 83.9 ms\n"
+      "CPU times: user 89.2 ms, sys: 15 µs, total: 89.3 ms\n",
+      "Wall time: 90 ms\n"
      ]
     }
    ],
@@ -132,8 +133,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 619 ms, sys: 3.99 ms, total: 623 ms\n",
-      "Wall time: 621 ms\n"
+      "CPU times: user 698 ms, sys: 3.86 ms, total: 702 ms\n",
+      "Wall time: 702 ms\n"
      ]
     }
    ],
@@ -152,8 +153,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 123 ms, sys: 37 µs, total: 123 ms\n",
-      "Wall time: 122 ms\n"
+      "CPU times: user 121 ms, sys: 3.91 ms, total: 125 ms\n",
+      "Wall time: 123 ms\n"
      ]
     }
    ],
@@ -172,8 +173,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 69 ms, sys: 10 µs, total: 69 ms\n",
-      "Wall time: 67.8 ms\n"
+      "CPU times: user 69.4 ms, sys: 25 µs, total: 69.5 ms\n",
+      "Wall time: 67.4 ms\n"
      ]
     }
    ],
@@ -209,8 +210,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 896 ms, sys: 16 ms, total: 912 ms\n",
-      "Wall time: 911 ms\n"
+      "CPU times: user 955 ms, sys: 28.1 ms, total: 983 ms\n",
+      "Wall time: 982 ms\n"
      ]
     }
    ],
@@ -229,8 +230,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 240 ms, sys: 34 µs, total: 240 ms\n",
-      "Wall time: 238 ms\n"
+      "CPU times: user 250 ms, sys: 0 ns, total: 250 ms\n",
+      "Wall time: 249 ms\n"
      ]
     }
    ],
@@ -249,8 +250,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 130 ms, sys: 18 µs, total: 130 ms\n",
-      "Wall time: 129 ms\n"
+      "CPU times: user 134 ms, sys: 27 µs, total: 134 ms\n",
+      "Wall time: 131 ms\n"
      ]
     }
    ],
@@ -286,8 +287,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.64 s, sys: 165 ms, total: 1.8 s\n",
-      "Wall time: 1.8 s\n"
+      "CPU times: user 1.8 s, sys: 192 ms, total: 1.99 s\n",
+      "Wall time: 1.99 s\n"
      ]
     }
    ],
@@ -306,8 +307,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 589 ms, sys: 144 ms, total: 734 ms\n",
-      "Wall time: 733 ms\n"
+      "CPU times: user 527 ms, sys: 228 ms, total: 755 ms\n",
+      "Wall time: 754 ms\n"
      ]
     }
    ],
@@ -326,8 +327,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 285 ms, sys: 205 ms, total: 490 ms\n",
-      "Wall time: 489 ms\n"
+      "CPU times: user 296 ms, sys: 188 ms, total: 484 ms\n",
+      "Wall time: 482 ms\n"
      ]
     }
    ],
