found pdist, which uses the symmetry in the output to reduce computations and memory by 50%

--- a/Distance_Benchmark.ipynb
+++ b/Distance_Benchmark.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import numpy as np\n",
     "import scipy.linalg.blas as slb\n",
-    "from scipy.spatial.distance import cdist"
+    "from scipy.spatial.distance import cdist, pdist"
    ]
   },
   {
@@ -31,20 +31,29 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## n = 500"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  0,  0],\n",
+       "       [ 3,  4,  5],\n",
+       "       [ 6,  5,  5],\n",
+       "       [ 8,  5,  5],\n",
+       "       [15, 13,  4]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "np.random.seed(0)\n",
-    "A = np.random.rand(500,3)"
+    "# Heronian triangle edge lengths\n",
+    "locations = np.array([[0,0,0],[3,4,5],[6,5,5],[8,5,5],[15,13,4]])\n",
+    "locations"
    ]
   },
   {
@@ -53,18 +62,22 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1.31 s, sys: 0 ns, total: 1.31 s\n",
-      "Wall time: 1.31 s\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[  0.,  50.,  86., 114., 410.],\n",
+       "       [ 50.,   0.,  10.,  26., 226.],\n",
+       "       [ 86.,  10.,   0.,   4., 146.],\n",
+       "       [114.,  26.,   4.,   0., 114.],\n",
+       "       [410., 226., 146., 114.,   0.]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%time\n",
-    "for i in range(100):\n",
-    "    a = distance_2(A)"
+    "distance_2(locations)"
    ]
   },
   {
@@ -73,18 +86,22 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 155 ms, sys: 3.37 ms, total: 159 ms\n",
-      "Wall time: 158 ms\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[  0.,  50.,  86., 114., 410.],\n",
+       "       [ 50.,   0.,  10.,  26., 226.],\n",
+       "       [ 86.,  10.,   0.,   4., 146.],\n",
+       "       [114.,  26.,   4.,   0., 114.],\n",
+       "       [410., 226., 146., 114.,   0.]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%time\n",
-    "for i in range(100):\n",
-    "    cdist(A, A, metric='euclidean')"
+    "cdist(locations, locations, metric='sqeuclidean')"
    ]
   },
   {
@@ -93,25 +110,25 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 89.2 ms, sys: 15 µs, total: 89.3 ms\n",
-      "Wall time: 90 ms\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([ 50.,  86., 114., 410.,  10.,  26., 226.,   4., 146., 114.])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%time\n",
-    "for i in range(100):\n",
-    "    cdist(A, A, metric='sqeuclidean')"
+    "pdist(locations, metric='sqeuclidean')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## n = 1000"
+    "## n = 500"
    ]
   },
   {
@@ -121,7 +138,7 @@
    "outputs": [],
    "source": [
     "np.random.seed(0)\n",
-    "A = np.random.rand(1000,3)"
+    "A = np.random.rand(500,3)"
    ]
   },
   {
@@ -133,15 +150,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 698 ms, sys: 3.86 ms, total: 702 ms\n",
-      "Wall time: 702 ms\n"
+      "CPU times: user 1.32 s, sys: 7.47 ms, total: 1.33 s\n",
+      "Wall time: 1.33 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "for i in range(20):\n",
-    "    distance_2(A)"
+    "for i in range(100):\n",
+    "    a = distance_2(A)"
    ]
   },
   {
@@ -153,15 +170,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 121 ms, sys: 3.91 ms, total: 125 ms\n",
-      "Wall time: 123 ms\n"
+      "CPU times: user 172 ms, sys: 19.9 ms, total: 192 ms\n",
+      "Wall time: 191 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "for i in range(20):\n",
-    "    cdist(A, A, metric='euclidean')"
+    "for i in range(100):\n",
+    "    a = cdist(A, A, metric='euclidean')"
    ]
   },
   {
@@ -173,32 +190,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 69.4 ms, sys: 25 µs, total: 69.5 ms\n",
-      "Wall time: 67.4 ms\n"
+      "CPU times: user 82.7 ms, sys: 0 ns, total: 82.7 ms\n",
+      "Wall time: 83.4 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "for i in range(20):\n",
-    "    cdist(A, A, metric='sqeuclidean')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## n = 2000"
+    "for i in range(100):\n",
+    "    a = pdist(A, metric='euclidean')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 85.1 ms, sys: 3.91 ms, total: 89 ms\n",
+      "Wall time: 87.7 ms\n"
+     ]
+    }
+   ],
    "source": [
-    "np.random.seed(0)\n",
-    "A = np.random.rand(2000,3)"
+    "%%time\n",
+    "for i in range(100):\n",
+    "    a = cdist(A, A, metric='sqeuclidean')"
    ]
   },
   {
@@ -210,35 +230,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 955 ms, sys: 28.1 ms, total: 983 ms\n",
-      "Wall time: 982 ms\n"
+      "CPU times: user 41.7 ms, sys: 69 µs, total: 41.8 ms\n",
+      "Wall time: 40.6 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "for i in range(10):\n",
-    "    distance_2(A)"
+    "for i in range(100):\n",
+    "    a = pdist(A, metric='sqeuclidean')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## n = 1000"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 250 ms, sys: 0 ns, total: 250 ms\n",
-      "Wall time: 249 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%time\n",
-    "for i in range(10):\n",
-    "    cdist(A, A, metric='euclidean')"
+    "np.random.seed(0)\n",
+    "A = np.random.rand(1000,3)"
    ]
   },
   {
@@ -250,32 +267,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 134 ms, sys: 27 µs, total: 134 ms\n",
-      "Wall time: 131 ms\n"
+      "CPU times: user 709 ms, sys: 3.98 ms, total: 713 ms\n",
+      "Wall time: 713 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "for i in range(10):\n",
-    "    cdist(A, A, metric='sqeuclidean')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## n = 3000"
+    "for i in range(20):\n",
+    "    a = distance_2(A)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 111 ms, sys: 40 ms, total: 151 ms\n",
+      "Wall time: 149 ms\n"
+     ]
+    }
+   ],
    "source": [
-    "np.random.seed(0)\n",
-    "A = np.random.rand(3000,3)"
+    "%%time\n",
+    "for i in range(20):\n",
+    "    a = cdist(A, A, metric='euclidean')"
    ]
   },
   {
@@ -287,15 +307,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.8 s, sys: 192 ms, total: 1.99 s\n",
-      "Wall time: 1.99 s\n"
+      "CPU times: user 65.7 ms, sys: 79 µs, total: 65.8 ms\n",
+      "Wall time: 64.3 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "for i in range(10):\n",
-    "    distance_2(A)"
+    "for i in range(20):\n",
+    "    a = pdist(A, metric='euclidean')"
    ]
   },
   {
@@ -307,15 +327,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 527 ms, sys: 228 ms, total: 755 ms\n",
-      "Wall time: 754 ms\n"
+      "CPU times: user 85.5 ms, sys: 16.1 ms, total: 102 ms\n",
+      "Wall time: 102 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "for i in range(10):\n",
-    "    cdist(A, A, metric='euclidean')"
+    "for i in range(20):\n",
+    "    a = cdist(A, A, metric='sqeuclidean')"
    ]
   },
   {
@@ -327,15 +347,249 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 296 ms, sys: 188 ms, total: 484 ms\n",
-      "Wall time: 482 ms\n"
+      "CPU times: user 34.6 ms, sys: 3.74 ms, total: 38.3 ms\n",
+      "Wall time: 37 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for i in range(20):\n",
+    "    a = pdist(A, metric='sqeuclidean')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## n = 2000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(0)\n",
+    "A = np.random.rand(2000,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 963 ms, sys: 40 ms, total: 1 s\n",
+      "Wall time: 1 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "for i in range(10):\n",
-    "    cdist(A, A, metric='sqeuclidean')"
+    "    a = distance_2(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 240 ms, sys: 43.9 ms, total: 284 ms\n",
+      "Wall time: 283 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for i in range(10):\n",
+    "    a = cdist(A, A, metric='euclidean')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 117 ms, sys: 8.08 ms, total: 126 ms\n",
+      "Wall time: 124 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for i in range(10):\n",
+    "    a = pdist(A, metric='euclidean')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 124 ms, sys: 51.5 ms, total: 176 ms\n",
+      "Wall time: 174 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for i in range(10):\n",
+    "    a = cdist(A, A, metric='sqeuclidean')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 59.7 ms, sys: 12.2 ms, total: 72 ms\n",
+      "Wall time: 70.3 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for i in range(10):\n",
+    "    a = pdist(A, metric='sqeuclidean')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## n = 3000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(0)\n",
+    "A = np.random.rand(3000,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.73 s, sys: 176 ms, total: 1.9 s\n",
+      "Wall time: 1.9 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for i in range(10):\n",
+    "    a = distance_2(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 568 ms, sys: 152 ms, total: 719 ms\n",
+      "Wall time: 718 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for i in range(10):\n",
+    "    a = cdist(A, A, metric='euclidean')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 271 ms, sys: 92.1 ms, total: 363 ms\n",
+      "Wall time: 362 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for i in range(10):\n",
+    "    a = pdist(A, metric='euclidean')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 321 ms, sys: 148 ms, total: 469 ms\n",
+      "Wall time: 467 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for i in range(10):\n",
+    "    a = cdist(A, A, metric='sqeuclidean')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 125 ms, sys: 104 ms, total: 228 ms\n",
+      "Wall time: 227 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for i in range(10):\n",
+    "    a = pdist(A, metric='sqeuclidean')"
    ]
   },
   {
